--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "4   18.42  55.99        8.05  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "4 -33.93   18.42"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,13 +271,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93bd9cb6dcc54cd2b00d50c930f56ec2",
+       "model_id": "af9eb4a58be9492997476ec37db9b5c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "9  68.38   17.60  60.80       11.41  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "4 -20.56  164.28  74.40       12.86             "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,26 @@
       "Missing field/result... skipping.\n",
       "Missing field/result... skipping.\n",
       "Missing field/result... skipping.\n",
-      "Missing field/result... skipping.\n"
+      "Missing field/result... skipping.\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 26 entries, 0 to 25\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   index       26 non-null     int64  \n",
+      " 1   City_ID     26 non-null     int64  \n",
+      " 2   City        26 non-null     object \n",
+      " 3   Cloudiness  26 non-null     int64  \n",
+      " 4   Country     26 non-null     object \n",
+      " 5   Date        26 non-null     int64  \n",
+      " 6   Humidity    26 non-null     int64  \n",
+      " 7   Lat         26 non-null     float64\n",
+      " 8   Lng         26 non-null     float64\n",
+      " 9   Temp        26 non-null     float64\n",
+      " 10  Wind_Speed  26 non-null     float64\n",
+      " 11  Hotel Name  26 non-null     object \n",
+      "dtypes: float64(4), int64(5), object(3)\n",
+      "memory usage: 2.6+ KB\n"
      ]
     }
    ],
@@ -775,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,13 +845,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "818c60b0f78f4e98a1cf9ad624360676",
+       "model_id": "af9eb4a58be9492997476ec37db9b5c9",
        "version_major": 2,
        "version_minor": 0
       },
