--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,9 +816,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ed004ac1ddde4f4d930b38ccd53fe0f6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(border='1px solid black', height='600px', margin='0 auto 0 auto', padding='1px', wi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
     "# Add marker layer ontop of heat map\n",
@@ -840,7 +855,10 @@
     "\n",
     "# Add layer\n",
     "fig.add_layer(heat_layer)\n",
-    "fig.add_layer(hotel_layer)"
+    "fig.add_layer(hotel_layer)\n",
+    "\n",
+    "# Display figure\n",
+    "fig"
    ]
   },
   {
@@ -863,10 +881,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "# Display figure\n",
-    "fig"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
