--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -670,6 +670,7 @@
     "\n",
     "    \n",
     "    # convert to json\n",
+    "    \n",
     "    name_address = name_address.json()\n",
     "    \n",
     "    #print(json.dumps(name_address, indent=4, sort_keys=True))\n",
@@ -681,7 +682,8 @@
     "        #hotel_df.loc[index, \"Airport Rating\"] = name_address[\"results\"][0][\"rating\"]\n",
     "    except (KeyError, IndexError):\n",
     "        print(\"Missing field/result... skipping.\")\n",
-    "#hotel_df.info()"
+    "        \n",
+    "#hotel_df.info()\n"
    ]
   },
   {
